--- a/templates/jokes/joke_list.html
+++ b/templates/jokes/joke_list.html
@@ -2,10 +2,12 @@
 
 {% block title %}Jokes{% endblock %}
 {% block main %}
-<h2>Jokes</h2>
-<ul class="list-group list-group-flush mb-3">
-{% for joke in joke_list %}
-<li class="list-group-item">{{ joke.question }}</li>
-{% endfor %}
-</ul>
+  <h2>Jokes</h2>
+  <ul class="list-group list-group-flush mb-3">
+    {% for joke in joke_list %}
+      <li class="list-group-item">
+        <a href="{% url 'jokes:detail' joke.pk %}">{{ joke.question }}</a>
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock %}
